[tool.poetry]
name = "kth-rl-mountain-car"
version = "0.1.0"
description = ""
authors = ["malyvsen <5940672+malyvsen@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
numpy = "^1.21.4"
gym = "^0.21.0"
tqdm = "^4.62.3"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
black = "^21.11b1"
nb-black = "^1.0.7"
plotly = "^5.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
